Place CppCodegen in a separate assembly
This is useful for general code hygiene (maybe we should do the same
with RyuJIT and UTC specific stuff), but what forced my hand to do this
now is that we would like to use `ILImporter` for things other than
importing for CppCodegen.

`ILImporter` is a partial class and its reusability depends on users
providing a different part file for the reusable portion. This makes the
class essentially incompatible with any other IL importer implementation
in the same assembly.

I looked into making `ILImporter` reusable, while maintaining the same
perf characteristics (no virtual calls on importing each instruction),
but I couldn't find a scheme where it still made sense.

Maybe we'll end up making the class reusable at some point and absorb
the perf hit, but this pull request has a leg to stand on on it's own.

--- a/src/ILCompiler/desktop/desktop.csproj
+++ b/src/ILCompiler/desktop/desktop.csproj
@@ -45,6 +45,10 @@
       <Project>{13bb3788-c3eb-4046-8105-a95f8ae49404}</Project>
       <Name>ILCompiler.Compiler</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\ILCompiler.Compiler.Cpp\src\ILCompiler.Compiler.Cpp.csproj">
+      <Project>{971AE7E7-08C6-48B4-902A-63851E6DAC66}</Project>
+      <Name>ILCompiler.Compiler.Cpp</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\ILCompiler.TypeSystem\src\ILCompiler.TypeSystem.csproj">
       <Project>{1a9df196-43a9-44bb-b2c6-d62aa56b0e49}</Project>
       <Name>ILCompiler.TypeSystem</Name>
