--- a/src/ILCompiler/src/ILCompiler.csproj
+++ b/src/ILCompiler/src/ILCompiler.csproj
@@ -55,7 +55,7 @@
       <Project>{13bb3788-c3eb-4046-8105-a95f8ae49404}</Project>
       <Name>ILCompiler.Compiler</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\ILCompiler.Compiler.Cpp\src\ILCompiler.Compiler.Cpp.csproj">
+    <ProjectReference Include="..\..\ILCompiler.CppCodeGen\src\ILCompiler.CppCodeGen.csproj">
       <Project>{971AE7E7-08C6-48B4-902A-63851E6DAC66}</Project>
       <Name>ILCompiler.Compiler.Cpp</Name>
     </ProjectReference>
