--- a/src/Native/System.Private.CoreLib.Native/CMakeLists.txt
+++ b/src/Native/System.Private.CoreLib.Native/CMakeLists.txt
@@ -6,6 +6,7 @@ set(NATIVE_SOURCES
     pal_dynamicload.cpp
     pal_environment.cpp
     pal_errno.cpp
+    pal_guid.cpp
     pal_memory.cpp
     pal_threading.cpp
     pal_time.cpp
