--- a/src/BuildIntegration/Microsoft.NETCore.Native.Unix.props
+++ b/src/BuildIntegration/Microsoft.NETCore.Native.Unix.props
@@ -53,6 +53,7 @@ See the LICENSE file in the project root for more information.
     <LinkerArg Include="-lstdc++" />
     <LinkerArg Include="-ldl" />
     <LinkerArg Include="-lm" />
+    <LinkerArg Include="-luuid" Condition="'$(TargetOS)' != 'OSX'" />
     <LinkerArg Include="-lrt" Condition="'$(TargetOS)' != 'OSX'" />
     <LinkerArg Include="-licucore" Condition="'$(TargetOS)' == 'OSX'" />
   </ItemGroup>
