--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -210,8 +210,8 @@
     <Compile Include="System\Globalization\SortKey.cs" />
     <Compile Include="System\Globalization\StringInfo.cs" />
     <Compile Include="System\Globalization\TextElementEnumerator.cs" />
-    <Compile Include="System\Globalization\FormatProvider.TimeSpanFormat.cs" />
-    <Compile Include="System\Globalization\FormatProvider.TimeSpanParse.cs" />
+    <Compile Include="System\Globalization\TimeSpanFormat.cs" />
+    <Compile Include="System\Globalization\TimeSpanParse.cs" />
     <Compile Include="System\InvokeUtils.cs" />
     <Compile Include="System\IO\BinaryReader.cs" />
     <Compile Include="System\IO\BinaryWriter.cs" />
