Add support for generating type level layout information from RuntimeDeterminedTypes - Add RuntimeDeterminedFieldLayoutAlgorithm type - Expose ValueTypeShapeCharacteristics directly from DefType instead of just representing the various flags - Adjust compiler type system context to support usage of RuntimeDeterminedFieldLayoutAlgorithm
[tfs-changeset: 1657930]

--- a/src/ILCompiler.TypeSystem/src/ILCompiler.TypeSystem.csproj
+++ b/src/ILCompiler.TypeSystem/src/ILCompiler.TypeSystem.csproj
@@ -512,6 +512,9 @@
     <Compile Include="..\..\Common\src\TypeSystem\RuntimeDetermined\RuntimeDeterminedCanonicalizationAlgorithm.cs">
       <Link>TypeSystem\RuntimeDetermined\RuntimeDeterminedCanonicalizationAlgorithm.cs</Link>
     </Compile>
+    <Compile Include="..\..\Common\src\TypeSystem\RuntimeDetermined\RuntimeDeterminedFieldLayoutAlgorithm.cs">
+      <Link>TypeSystem\RuntimeDetermined\RuntimeDeterminedFieldLayoutAlgorithm.cs</Link>
+    </Compile>
     <Compile Include="..\..\Common\src\TypeSystem\RuntimeDetermined\DefType.RuntimeDetermined.cs">
       <Link>TypeSystem\RuntimeDetermined\DefType.RuntimeDetermined.cs</Link>
     </Compile>
