--- a/dir.targets
+++ b/dir.targets
@@ -31,7 +31,7 @@
   <!-- OverrideLicenseUrl is temporary till we update the buildtools to v2 -->  
   <Target Name="OverrideLicenseUrl" BeforeTargets="GenerateNuSpec">
     <PropertyGroup>
-      <LicenseUrl>https://github.com/dotnet/corefx/blob/master/LICENSE</LicenseUrl>
+      <LicenseUrl>https://github.com/dotnet/corert/blob/master/LICENSE.TXT</LicenseUrl>
     </PropertyGroup>
   </Target>
 
