--- a/src/System.Private.TypeLoader/src/System.Private.TypeLoader.csproj
+++ b/src/System.Private.TypeLoader/src/System.Private.TypeLoader.csproj
@@ -394,6 +394,9 @@
     <Compile Include="..\..\Common\src\TypeSystem\Common\WellKnownType.cs">
       <Link>Internal\TypeSystem\WellKnownType.cs</Link>
     </Compile>
+    <Compile Include="..\..\Common\src\TypeSystem\Common\WellKnownTypeExtensions.cs">
+      <Link>Internal\TypeSystem\WellKnownTypeExtensions.cs</Link>
+    </Compile>
     <Compile Include="Internal\Runtime\CompilerHelpers\LibraryInitializer.cs" />
     <Compile Include="Internal\Runtime\TypeLoader\CallConverterThunk.CallConversionInfo.cs" />
     <Compile Include="Internal\Runtime\TypeLoader\CallConverterThunk.CallConversionParameters.cs" />
