--- a/src/Native/System.Private.CoreLib.Native/CMakeLists.txt
+++ b/src/Native/System.Private.CoreLib.Native/CMakeLists.txt
@@ -8,6 +8,7 @@ set(NATIVE_SOURCES
     pal_errno.cpp
     pal_guid.cpp
     pal_memory.cpp
+    pal_exepath.cpp
     pal_threading.cpp
     pal_time.cpp
 )
