Make metadata generation dependency driven
This is in preparation to moving reflection metadata analysis to the
scanning phase.

* Metadata needs are modeled in the dependency analysis engine:
`TypeMetadataNode`/`MethodMetadataNode`/`ModuleMetadataNode` now model
the metadata needs of individual types. We no longer use list of
generated EETypes/Methods to drive metadata generation.
* Dependencies of custom attributes are now correctly modeled. We no
longer end up with custom attributes that are useless at runtime and
crash with TypeLoadExceptions (cough, in ResourceManager, cough)
* Reflection blocking now applies when emitting invoke mapping tables
* MetadataBlocking policy is now a reusable object (we'll need to reuse
it between the metadata manager used for scanning for reflection use and
metadata manager used at compile time when we no longer analyze
reflection).
* We now correctly filter special methods that are not eligible to be in
the mapping tables (cctors, finalizers, etc.).

--- a/src/ILCompiler.Compiler/src/ILCompiler.Compiler.csproj
+++ b/src/ILCompiler.Compiler/src/ILCompiler.Compiler.csproj
@@ -112,10 +112,15 @@
     <Compile Include="Compiler\CompilerTypeSystemContext.BoxedTypes.cs" />
     <Compile Include="Compiler\CompilerTypeSystemContext.Mangling.cs" />
     <Compile Include="Compiler\CompilerTypeSystemContext.Sorting.cs" />
+    <Compile Include="Compiler\DependencyAnalysis\CustomAttributeBasedDependencyAlgorithm.cs" />
     <Compile Include="Compiler\DependencyAnalysis\ILScanNodeFactory.cs" />
     <Compile Include="Compiler\DependencyAnalysis\ImportedGenericDictionaryNode.cs" />
     <Compile Include="Compiler\DependencyAnalysis\DynamicInvokeTemplateDataNode.cs" />
+    <Compile Include="Compiler\MetadataBlockingPolicy.cs" />
+    <Compile Include="Compiler\DependencyAnalysis\MethodMetadataNode.cs" />
     <Compile Include="Compiler\DependencyAnalysis\ReflectableMethodNode.cs" />
+    <Compile Include="Compiler\DependencyAnalysis\ModuleMetadataNode.cs" />
+    <Compile Include="Compiler\DependencyAnalysis\TypeMetadataNode.cs" />
     <Compile Include="Compiler\DependencyAnalysis\ScannedMethodNode.cs" />
     <Compile Include="Compiler\DependencyAnalysis\ShadowConcreteUnboxingThunkNode.cs" />
     <Compile Include="Compiler\DependencyTrackingLevel.cs" />
